hse-2026-deploy/pod-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      command: ["nginx", "-g", "daemon off;"]
      ports:
        - containerPort: 80
      volumeMounts:
        - name: static
          mountPath: "/usr/share/nginx/html"
          readOnly: true
  volumes:
    - name: static
      configMap:
        name: nginx
